Contrast color issue has been resolved in headline support
necessary color adjustment has been done to create better contrast

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ header {
 
 .headline-sm-suport {
   margin: 10px 0;
-  color: #7f8cff;
+  color: #041dff;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
